feat: implement SimpleCTHelpers for gas-efficient CTF operations
- Created SimpleCTHelpers library using keccak256 instead of elliptic curve operations
- Reduced gas costs by ~200x (from ~30M to ~150k gas for splitPosition)
- Updated ConditionalTokens to use SimpleCTHelpers
- Added comprehensive test suite (20 tests) covering all CTF operations:
  * prepareCondition, reportPayouts
  * splitPosition, mergePositions, redeemPositions
  * Edge cases and error handling
- Successfully deployed and tested on Unichain Sepolia
- Trade-off: Loses commutative property, suitable for simple binary markets

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,3 +6,6 @@ via_ir = true
 optimizer = true
 optimizer_runs = 200
 
+# Etherscan API configuration for contract verification
+[etherscan]
+unichain-sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.uniscan.xyz/api" }
